--- a/index.html
+++ b/index.html
@@ -82,9 +82,19 @@
 
     <section class="hero">
       <picture>
-        <source srcset="images/Hero_Mobile.webp" media="(max-width: 576px)" />
-        <source srcset="images/Hero_Tablet.webp" media="(max-width: 960px)" />
-        <img src="images/Hero_Desktop.webp" />
+        <source
+          width="576"
+          height="576"
+          srcset="images/Hero_Mobile.webp"
+          media="(max-width: 576px)"
+        />
+        <source
+          width="960"
+          height="770"
+          srcset="images/Hero_Tablet.webp"
+          media="(max-width: 960px)"
+        />
+        <img width="1920" height="893" src="images/Hero_Desktop.webp" />
       </picture>
 
       <!-- <img class="desktop" src="images/Hero_Desktop.webp" />
@@ -112,7 +122,12 @@
         <div class="container">
           <div class="product new">
             <div class="product-picture">
-              <img src="images/vr1.webp" alt="product: Penom Case" />
+              <img
+                height="155"
+                width="155"
+                src="images/vr1.webp"
+                alt="product: Penom Case"
+              />
             </div>
             <div class="product-info">
               <h5 class="categories">Headsets, Apple</h5>
@@ -127,6 +142,8 @@
           <div class="product new">
             <div class="product-picture">
               <img
+                height="155"
+                width="155"
                 src="images/vr2.webp"
                 alt="product: Noise Cancelling Headphone"
               />
@@ -144,6 +161,8 @@
           <div class="product">
             <div class="product-picture">
               <img
+                height="155"
+                width="155"
                 src="images/vr3.webp"
                 alt="product: Canon Digital SLR EOS Rebel T6"
               />
